[package]
name = "departures"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["rustls-tls"] }
roxmltree = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
